--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -5,29 +6,23 @@
   <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-  <div class="wrapper">
-    <form action="#">
-      <h2>Login</h2>
-        <div class="input-field">
-        <input type="text" required>
-        <label>Enter your email</label>
-      </div>
-      <div class="input-field">
-        <input type="password" required>
-        <label>Enter your password</label>
-      </div>
-      <div class="forget">
-        <label for="remember">
-          <input type="checkbox" id="remember">
-          <p>Remember me</p>
-        </label>
-        <a href="#">Forgot password?</a>
-      </div>
-      <button type="submit">Log In</button>
-      <div class="register">
-        <p>Don't have an account? <a href="signup.html">Register</a></p>
-      </div>
-    </form>
+  <div class="background">
+      <div class="shape"></div>
+      <div class="shape"></div>
   </div>
+  <form>
+      <h3>Login Page</h3>
+
+      <label for="username">Username</label>
+      <input type="text" placeholder="Email or Phone" id="username">
+
+      <label for="password">Password</label>
+      <input type="password" placeholder="Password" id="password">
+
+      <button>Log In</button><br><br>
+      <div class="sign up">
+        <p>Not registered yet? <a href="/signup.html">sign up</a></p>
+      </div>
+  </form>
 </body>
 </html>
