--- a/signup.html
+++ b/signup.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -5,27 +6,26 @@
   <link rel="stylesheet" href="css/signup.css">
 </head>
 <body>
-  <div class="wrapper">
-    <form action="#">
-      <h2>Sign Up</h2>
-      <div class="input-field">
-        <input type="text" required>
-        <label>Enter your Username</label>
-      </div>
-      <div class="input-field">
-        <input type="text" required>
-        <label>Enter your email</label>
-      </div>
-      <div class="input-field">
-        <input type="password" required>
-        <label>Enter your password</label>
-      </div>
-      <div class="input-field">
-        <input type="password" required>
-        <label>Confirm Password</label>
-      </div>
-      <button type="submit">Sign Up</button>
-    </form>
+  <div class="background">
+      <div class="shape"></div>
+      <div class="shape"></div>
   </div>
+  <form>
+      <h3>Sign up</h3>
+
+      <label for="username">Username</label>
+      <input type="text" placeholder="Email or Phone" id="username">
+
+      <label for="password">Password</label>
+      <input type="password" placeholder="Password" id="password">
+      
+      <label for="password">Confirm Password</label>
+      <input type="password" placeholder="Password" id="password">
+
+      <button>Log In</button><br><br><br>
+      <div class="sign up">
+        <p>Already Registered? <a href="/login.html">login</a></p>
+      </div>
+  </form>
 </body>
 </html>
