--- a/homepage.html
+++ b/homepage.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <link rel="stylesheet" href="/css/home.css">
+        <link rel="stylesheet" href="css/home.css">
 
         <nav class="navbar">
             <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">Services</a></li>
               <li><a href="#">About Us</a></li>
-              <li><a href="#">Profile</a></li>
+              <li><a href="profile.html">Profile</a></li>
             </ul>
           </nav><br><br><br>
 
@@ -16,32 +16,32 @@
           <section><h2 style="text-align: center;">Popular Services</h2>
             <div class="container">
                 <div class="serv">
-                    <img src="/images/programmer.jpg" >
+                    <img src="images/programmer.jpg" >
                     <h3>Developer</h3>
                     <p>Discover our freelancing developers</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/artist.jpg">
+                    <img src="images/artist.jpg">
                     <h3>Artist</h3>
                     <p>Discover our freelancing artists</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/musician.jpg">
+                    <img src="images/musician.jpg">
                     <h3>Musicians</h3>
                     <p>Discover our freelancing musicians</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/editor.jpg">
+                    <img src="images/editor.jpg">
                     <h3>Video Editor</h3>
                     <p>Discover our freelancing editors</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/architect.jpg">
+                    <img src="images/architect.jpg">
                     <h3>Architects</h3>
                     <p>Discover our freelancing architects</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/uiux_designer.jpg">
+                    <img src="images/uiux_designer.jpg">
                     <h3>UI/UX Designers</h3>
                     <p>Discover our freelancing UI/UX Designers</p>
                 </div>
@@ -52,32 +52,32 @@
           <section><h2 style="text-align: center;">Popular Freelancers</h2>
             <div class="container">
                 <div class="serv">
-                    <img src="/images/programmer.jpg" >
+                    <img src="images/programmer.jpg" >
                     <h3>Freelancer 1</h3>
                     <p>programming freelancer</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/artist.jpg">
+                    <img src="images/artist.jpg">
                     <h3>freelancer 2</h3>
                     <p>artist freelancer</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/musician.jpg">
+                    <img src="images/musician.jpg">
                     <h3>freelancer 3</h3>
                     <p>musician freelancer</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/editor.jpg">
+                    <img src="images/editor.jpg">
                     <h3>freelancer 4</h3>
                     <p>video editing freelancer</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/architect.jpg">
+                    <img src="images/architect.jpg">
                     <h3>freelancer 5</h3>
                     <p>architect freelancer</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/uiux_designer.jpg">
+                    <img src="images/uiux_designer.jpg">
                     <h3>freelancer 6</h3>
                     <p>designer freelancer</p>
                 </div>
@@ -87,32 +87,32 @@
           <section><h2 style="text-align: center;">Popular Services</h2>
             <div class="container">
                 <div class="serv">
-                    <img src="/images/programmer.jpg" >
+                    <img src="images/programmer.jpg" >
                     <h3>Developer</h3>
                     <p>Discover our freelancing developers</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/artist.jpg">
+                    <img src="images/artist.jpg">
                     <h3>Artist</h3>
                     <p>Discover our freelancing artists</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/musician.jpg">
+                    <img src="images/musician.jpg">
                     <h3>Musicians</h3>
                     <p>Discover our freelancing musicians</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/editor.jpg">
+                    <img src="images/editor.jpg">
                     <h3>Video Editor</h3>
                     <p>Discover our freelancing editors</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/architect.jpg">
+                    <img src="images/architect.jpg">
                     <h3>Architects</h3>
                     <p>Discover our freelancing architects</p>
                 </div>
                 <div class="serv">
-                    <img src="/images/uiux_designer.jpg">
+                    <img src="images/uiux_designer.jpg">
                     <h3>UI/UX Designers</h3>
                     <p>Discover our freelancing UI/UX Designers</p>
                 </div>
