--- a/login.html
+++ b/login.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/login.css">
+  <title>Login Page</title>
 </head>
 <body>
   <div class="background">
       <div class="shape"></div>
       <div class="shape"></div>
   </div>
-  <form>
+  <form id="loginForm" onsubmit="return validateForm()">
       <h3>Login Page</h3>
 
       <label for="username">Username</label>
-      <input type="text" placeholder="Email or Phone" id="username">
+      <input type="text" placeholder="Email or Phone" id="username" required>
 
       <label for="password">Password</label>
-      <input type="password" placeholder="Password" id="password">
+      <input type="password" placeholder="Password" id="password" required>
 
-      <button>Log In</button><br><br>
-      <div class="sign up">
-        <p>Not registered yet? <a href="/signup.html">sign up</a></p>
+      <button type="submit">Log In</button><br><br>
+      <div class="sign-up">
+        <p>Not registered yet? <a href="signup.html">sign up</a></p>
       </div>
   </form>
+
+  <script>
+      function validateForm() {
+          const username = document.getElementById('username').value;
+          const password = document.getElementById('password').value;
+
+          if (!username || !password) {
+              alert("Please fill in all fields.");
+              return false;
+          }
+
+          // Redirect to homepage if validation passes
+          window.location.href = 'homepage.html';
+          return false; // Prevent form submission
+      }
+  </script>
 </body>
 </html>
